--- a/priv/static/index.html
+++ b/priv/static/index.html
@@ -1,26 +1,9 @@
 <!DOCTYPE html>
 <html>
-<style>
-
-    .node text {
-
-       /* stroke: #fff;
-        stroke-width: 1.5px;     */
-        pointer-events: none;
-        font: 10px sans-serif;
-    }
-
-    .link {
-        stroke: #999;
-        stroke-opacity: .6;
-    }
-</style>
     <head>
         <meta charset="utf-8">
         <title>Lashup Nerve Center</title>
-        <script src="//d3js.org/d3.v3.js" charset="utf-8"></script>
         <script src="//code.jquery.com/jquery-2.2.0.js"></script>
-        <script src="/static/lashup.js"></script>
         <script>
             $( document ).ready(
                     function() {
@@ -28,8 +11,36 @@
                     }
             );
         </script>
+        <style type="text/css">
+            body {
+                font-family: helvetica;
+                font-size: 14px;
+            }
+            #lashup {
+                width: 100%;
+                height: 100%;
+                position: absolute;
+                left: 0;
+                top: 0;
+                z-index: 999;
+            }
+            h1 {
+                opacity: 0.5;
+                font-size: 1em;
+            }
+        </style>
     </head>
     <body>
-        Sup?
+        <script src="/static/cytoscape.js"></script>
+        <script src="/static/cytoscape-spread.js"></script>
+        <!---
+        <script src="http://marvl.infotech.monash.edu/webcola/cola.v3.min.js"></script>
+        <script src="/static/cytoscape-cola.js"></script>
+        <script src="/static/arbor.js"></script>
+        <script src="/static/cytoscape-arbor.js"></script>
+        -->
+        <script src="/static/lashup.js"></script>
+
+        <div id="lashup"></div>
     </body>
 </html>
