--- a/priv/static/index.html
+++ b/priv/static/index.html
@@ -4,6 +4,9 @@
         <meta charset="utf-8">
         <title>Lashup Nerve Center</title>
         <script src="//code.jquery.com/jquery-2.2.0.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.5.14/d3.js"></script>
+        <script src="/static/colorbrewer.js"></script>
+        <link rel="stylesheet" type="text/css" href="/static/colorbrewer.css">
         <script>
             $( document ).ready(
                     function() {
